bk_ida/gccida/c0/dwarf2out_abstract_function
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dwarf2out_abstract_function/src/dwarf2out.c:10601:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *abstract_origin; // [rsp+20h] [rbp-30h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dwarf2out_abstract_function/src/dwarf2out.c:10603:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *context; // [rsp+30h] [rbp-20h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dwarf2out_abstract_function/src/dwarf2out.c:10604:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *save_fn; // [rsp+38h] [rbp-18h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dwarf2out_abstract_function/src/dwarf2out.c:10615:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 > DINFO_LEVEL_TERSE ) 
                    ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dwarf2out_abstract_function/src/obj/dwarf2out.o] Error 1
